# llama-cpp-rs

./: .gitmodules  json  punch_analysis.json
examples/embeddings/: Cargo.toml
examples/mtmd/: Cargo.toml
examples/reranker/: Cargo.toml
examples/simple/: Cargo.toml
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: context.rs  lib.rs  llama_backend.rs  llama_batch.rs  log.rs  model.rs  mtmd.rs  sampling.rs  timing.rs  token.rs  token_type.rs
llama-cpp-2/src/context/: kv_cache.rs  params.rs  session.rs
llama-cpp-2/src/grammar/: tests.rs
llama-cpp-2/src/model/: params.rs
llama-cpp-2/src/model/params/: kv_overrides.rs
llama-cpp-2/src/token/: data.rs  data_array.rs  logit_bias.rs
llama-cpp-sys-2/: Cargo.toml  build.rs  build.rs.backup2  windows_cuda.patch
