[package]
name = "mtmd"
version = "0.1.123"
edition = "2021"

[dependencies]
shimmy-llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.123", features = ["mtmd"] }
clap = { workspace = true, features = ["derive"] }

[features]
cuda = ["shimmy-llama-cpp-2/cuda"]
metal = ["shimmy-llama-cpp-2/metal"]
native = ["shimmy-llama-cpp-2/native"]
vulkan = ["shimmy-llama-cpp-2/vulkan"]

[lints]
workspace = true

[[example]]
name = "mtmd"
path = "src/mtmd.rs"
