[package]
name = "reranker"
version = "0.1.123"
edition = "2021"

[dependencies]
shimmy-llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.123" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }

[features]
cuda = ["shimmy-llama-cpp-2/cuda"]
metal = ["shimmy-llama-cpp-2/metal"]
native = ["shimmy-llama-cpp-2/native"]
vulkan = ["shimmy-llama-cpp-2/vulkan"]

[lints]
workspace = true